euphony-pattern/src/snapshots/euphony_pattern__tests__alternate.snap
---
source: euphony-pattern/src/lib.rs
expression: "bd, (sd, hh, cp)"
---
[
    (
        Arc {
            start: Beat(0),
            end: Beat(1/2),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(1/2),
            end: Beat(1),
        },
        "sd",
    ),
    (
        Arc {
            start: Beat(1),
            end: Beat(3/2),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(3/2),
            end: Beat(2),
        },
        "hh",
    ),
    (
        Arc {
            start: Beat(2),
            end: Beat(5/2),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(5/2),
            end: Beat(3),
        },
        "cp",
    ),
]
