euphony-pattern/src/snapshots/euphony_pattern__tests__alternate_nested.snap
---
source: euphony-pattern/src/lib.rs
expression: "(sd, (hh, (cp, bd)))"
---
[
    (
        Arc {
            start: Beat(0),
            end: Beat(1),
        },
        "sd",
    ),
    (
        Arc {
            start: Beat(1),
            end: Beat(2),
        },
        "hh",
    ),
    (
        Arc {
            start: Beat(2),
            end: Beat(3),
        },
        "sd",
    ),
    (
        Arc {
            start: Beat(3),
            end: Beat(4),
        },
        "cp",
    ),
    (
        Arc {
            start: Beat(4),
            end: Beat(5),
        },
        "sd",
    ),
    (
        Arc {
            start: Beat(5),
            end: Beat(6),
        },
        "hh",
    ),
    (
        Arc {
            start: Beat(6),
            end: Beat(7),
        },
        "sd",
    ),
    (
        Arc {
            start: Beat(7),
            end: Beat(8),
        },
        "bd",
    ),
]
