euphony-pattern/src/snapshots/euphony_pattern__tests__repeat-2.snap
---
source: euphony-pattern/src/lib.rs
expression: bd * 2
---
[
    (
        Arc {
            start: Beat(0),
            end: Beat(1/2),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(1/2),
            end: Beat(1),
        },
        "bd",
    ),
]
