euphony-pattern/src/snapshots/euphony_pattern__tests__repeat.snap
---
source: euphony-pattern/src/lib.rs
expression: "bd * 2, sd"
---
[
    (
        Arc {
            start: Beat(0),
            end: Beat(1/4),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(1/4),
            end: Beat(1/2),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(1/2),
            end: Beat(1),
        },
        "sd",
    ),
]
