euphony-pattern/src/snapshots/euphony_pattern__tests__repeat_alternate.snap
---
source: euphony-pattern/src/lib.rs
expression: "bd * (2, 3), sd"
---
[
    (
        Arc {
            start: Beat(0),
            end: Beat(1/4),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(1/4),
            end: Beat(1/2),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(1/2),
            end: Beat(1),
        },
        "sd",
    ),
    (
        Arc {
            start: Beat(1),
            end: Beat(7/6),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(7/6),
            end: Beat(4/3),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(4/3),
            end: Beat(3/2),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(3/2),
            end: Beat(2),
        },
        "sd",
    ),
]
