euphony-pattern/src/snapshots/euphony_pattern__tests__replicate.snap
---
source: euphony-pattern/src/lib.rs
expression: "hh, bd . repl(2)"
---
[
    (
        Arc {
            start: Beat(0),
            end: Beat(1/3),
        },
        "hh",
    ),
    (
        Arc {
            start: Beat(1/3),
            end: Beat(2/3),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(2/3),
            end: Beat(1),
        },
        "bd",
    ),
]
