euphony-pattern/src/snapshots/euphony_pattern__tests__replicate_alternate.snap
---
source: euphony-pattern/src/lib.rs
expression: "hh, bd . repl((2, 3))"
---
[
    (
        Arc {
            start: Beat(0),
            end: Beat(1/3),
        },
        "hh",
    ),
    (
        Arc {
            start: Beat(1/3),
            end: Beat(2/3),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(2/3),
            end: Beat(1),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(1),
            end: Beat(5/4),
        },
        "hh",
    ),
    (
        Arc {
            start: Beat(5/4),
            end: Beat(3/2),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(3/2),
            end: Beat(7/4),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(7/4),
            end: Beat(2),
        },
        "bd",
    ),
]
