euphony-pattern/src/snapshots/euphony_pattern__tests__slow-2.snap
---
source: euphony-pattern/src/lib.rs
expression: bd / 2
---
[
    (
        Arc {
            start: Beat(0),
            end: Beat(2),
        },
        "bd",
    ),
]
