euphony-pattern/src/snapshots/euphony_pattern__tests__slow.snap
---
source: euphony-pattern/src/lib.rs
expression: "bd / 2, sd"
---
[
    (
        Arc {
            start: Beat(0),
            end: Beat(1),
        },
        "bd",
    ),
    (
        Arc {
            start: Beat(1/2),
            end: Beat(1),
        },
        "sd",
    ),
    (
        Arc {
            start: Beat(3/2),
            end: Beat(2),
        },
        "sd",
    ),
]
